--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Suphada Thongthai",
   "license": "ISC",
@@ -12,11 +12,15 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0"
   },
+  "engines": {
+    "node": "12.18.0",
+    "npm": "6.14.4"
+  },
   "scripts": {
     "start": "node index.js"
   },
  "engines": {
-    "node": "12.18.0",
+    "node": "v12.18.0",
     "npm": "6.14.4"
   }
 
